--- a/PlayableSectopod/Config/XComClassData.ini
+++ b/PlayableSectopod/Config/XComClassData.ini
@@ -17,10 +17,11 @@
 +SquaddieLoadout="PA_SectopodLoadout"
 +AllowedArmors="Soldier"
 +AllowedWeapons=(SlotType=eInvSlot_PrimaryWeapon, WeaponType="PA_SectopodGunCat")
++AllowedWeapons=(SlotType=eInvSlot_SecondaryWeapon, WeaponType="PA_Sectopod_WrathCannonCat")
 
 ; squaddie
-+SoldierRanks=(AbilitySlots=(	((AbilityType=(AbilityName="PA_BlasterShot", ApplyToWeaponSlot=eInvSlot_TertiaryWeapon)), \\
-								(AbilityType=(AbilityName="PA_InitialState", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)), \\
++SoldierRanks=(AbilitySlots=(	((AbilityType=(AbilityName="PA_BlasterShot", ApplyToWeaponSlot=eInvSlot_TertiaryWeapon))), \\
+								(AbilityType=(AbilityName="PA_InitialState")), \\
 								(AbilityType=(AbilityName="PA_SectopodHigh",  ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
 								(AbilityType=(AbilityName="PA_SectopodLow",  ApplyToWeaponSlot=eInvSlot_PrimaryWeapon))), \\
 				aStatProgression=((StatType=eStat_Offense,StatAmount=1), (StatType=eStat_HP,StatAmount=0),  (StatType=eStat_Strength,StatAmount=2), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=1)),\\
