--- a/PlayableSectopod/Config/XcomGameData_AbilityData.ini
+++ b/PlayableSectopod/Config/XcomGameData_AbilityData.ini
@@ -81,10 +81,10 @@ PA_WrathCannonRange = 15
 PA_WrathCannonEnvDamage = 30
 
 DontDisplayWrathCannonAbilityInAbilitySummary = false
-DontDisplayWrathCannonStage2AbilityInAbilitySummary = true
+DontDisplayWrathCannonStage2AbilityInAbilitySummary = false
 
 DontDisplayBlasterAbilityInAbilitySummary = false
-DontDisplayBlasterDuringCannonAbilityInAbilitySummary = true
+DontDisplayBlasterDuringCannonAbilityInAbilitySummary = false
 
 PA_HeightChange = 3
 PA_HighStance_EnvDamage = 30
