might fix ability random

--- a/PlayableSectopod/Config/XComClassData.ini
+++ b/PlayableSectopod/Config/XComClassData.ini
@@ -20,11 +20,12 @@
 +AllowedWeapons=(SlotType=eInvSlot_SecondaryWeapon, WeaponType="PA_Sectopod_WrathCannonCat")
 
 ; squaddie
-+SoldierRanks=(AbilitySlots=(	((AbilityType=(AbilityName="PA_BlasterShot", ApplyToWeaponSlot=eInvSlot_TertiaryWeapon))), \\
++SoldierRanks=(AbilitySlots=((), \\
+								((AbilityType=(AbilityName="PA_BlasterShot", ApplyToWeaponSlot=eInvSlot_TertiaryWeapon))), \\
 								(AbilityType=(AbilityName="PA_InitialState")), \\
 								(AbilityType=(AbilityName="PA_SectopodHigh",  ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
-								(AbilityType=(AbilityName="PA_SectopodLow",  ApplyToWeaponSlot=eInvSlot_PrimaryWeapon))), \\
-				aStatProgression=((StatType=eStat_Offense,StatAmount=1), (StatType=eStat_HP,StatAmount=0),  (StatType=eStat_Strength,StatAmount=2), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=1)),\\
+								(AbilityType=(AbilityName="PA_SectopodLow",  ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
+				aStatProgression=((StatType=eStat_Offense,StatAmount=1), (StatType=eStat_HP,StatAmount=0),  (StatType=eStat_Strength,StatAmount=2), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=1))),\\
 			 )
 
 ; corporal
@@ -32,8 +33,8 @@
 								(AbilityType=(AbilityName="EverVigilant", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon))), \\
 								(RandomDeckName="Tier1_XComAbilities"), \\
 							 ), \\
-				aStatProgression=((StatType=eStat_Offense,StatAmount=1), (StatType=eStat_HP,StatAmount=0), (StatType=eStat_Strength,StatAmount=2), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=0)),\\
-			 )
+				aStatProgression=((StatType=eStat_Offense,StatAmount=1), (StatType=eStat_HP,StatAmount=0), (StatType=eStat_Strength,StatAmount=2), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=0))),\\
+
 
 ; sergeant
 +SoldierRanks=(AbilitySlots=(	((AbilityType=(AbilityName="PA_SectopodLightningField", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
@@ -41,24 +42,24 @@
 								(AbilityType=(AbilityName="Repair",  ApplyToWeaponSlot=eInvSlot_Unknown))), \\
 								(RandomDeckName="Tier1_XComAbilities"), \\
 							 ), \\
-				aStatProgression=((StatType=eStat_Offense,StatAmount=1), (StatType=eStat_HP,StatAmount=0), (StatType=eStat_Strength,StatAmount=2), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=0)),\\
-			 )
+				aStatProgression=((StatType=eStat_Offense,StatAmount=1), (StatType=eStat_HP,StatAmount=0), (StatType=eStat_Strength,StatAmount=2), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=0))),\\
+
 
 ; lieutenant
 +SoldierRanks=(AbilitySlots=(	((AbilityType=(AbilityName="PA_WrathCannon_Ability")), \\
 								(AbilityType=(AbilityName="HoloTargeting",  ApplyToWeaponSlot=eInvSlot_SecondaryWeapon))), \\
 								(RandomDeckName="Tier2_XComAbilities"), \\
 							 ), \\
-				aStatProgression=((StatType=eStat_Offense,StatAmount=2), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=2), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=0)),\\
-			 )
+				aStatProgression=((StatType=eStat_Offense,StatAmount=2), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=2), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=0))),\\
+
 
 ; Captain
 +SoldierRanks=(AbilitySlots=(	((AbilityType=(AbilityName="RunAndGun")), \\
 								(AbilityType=(AbilityName="SaturationFire",  ApplyToWeaponSlot=eInvSlot_PrimaryWeapon))), \\
 								(RandomDeckName="Tier2_XComAbilities"), \\
 							 ), \\
-				aStatProgression=((StatType=eStat_Offense,StatAmount=2), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=2), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=0)),\\
-			 )
+				aStatProgression=((StatType=eStat_Offense,StatAmount=2), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=2), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=0))),\\
+
 
 ; Major
 +SoldierRanks=(AbilitySlots=(	((AbilityType=(AbilityName="Sentinel")), \\
@@ -66,8 +67,8 @@
 								(AbilityType=(AbilityName="Untouchable",  ApplyToWeaponSlot=eInvSlot_SecondaryWeapon))), \\
 								(RandomDeckName="Tier2_XComAbilities"), \\
 							 ), \\
-				aStatProgression=((StatType=eStat_Offense,StatAmount=2), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=2), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=0)),\\
-			 )
+				aStatProgression=((StatType=eStat_Offense,StatAmount=2), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=2), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=0))),\\
+
 
 ; Colonel
 +SoldierRanks=(AbilitySlots=(	((AbilityType=(AbilityName="Hailofbullets")), \\
@@ -75,5 +76,4 @@
 								(AbilityType=(AbilityName="FanFire",  ApplyToWeaponSlot=eInvSlot_SecondaryWeapon))), \\
 								(RandomDeckName="Tier2_XComAbilities"), \\
 							 ), \\
-				aStatProgression=((StatType=eStat_Offense,StatAmount=2), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=2), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=0)),\\
-			 )
+				aStatProgression=((StatType=eStat_Offense,StatAmount=2), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=2), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=0))),\\
