--- a/PlayableSectopod/Config/XComGameData_WeaponData.ini
+++ b/PlayableSectopod/Config/XComGameData_WeaponData.ini
@@ -35,6 +35,8 @@ PA_WrathCannon_SoundRange = 24
 PA_WrathCannon_EnvironmentDamage = 30
 PA_WrathCannon_IdealRange = 8
 
-
 ;* This is the base damage of the Lightning Field. Default is : Damage=10, Spread=1, PlusOne=0, Crit=0, Pierce=3, Shred=0, Tag = "", DamageType="Electrical". Base game default is "PA_LightningFieldDamage= (Damage=10, Spread=1, PlusOne=0, Crit=0, Pierce=3, Shred=0, Tag = "", DamageType="Electrical")"
 PA_LightningFieldDamage= (Damage=10, Spread=1, PlusOne=0, Crit=0, Pierce=3, Shred=0, Tag = "", DamageType="Electrical")
+
+;* This is the base damage of the Blaster shot. Damage=10, Spread = 0, PlusOne = 50, Crit = 5, Pierce = 1, Shred = 3, Tag = "", DamageType="Projectile_MagXCom". Base game default is PA_SectopodGun_BaseDamage= (Damage=10, Spread = 0, PlusOne = 50, Crit = 4, Pierce = 0, Shred = 2, Tag = "", DamageType="Projectile_MagXCom")
+PA_SectopodGun_BaseDamage= (Damage=10, Spread = 0, PlusOne = 50, Crit = 5, Pierce = 1, Shred = 3, Tag = "", DamageType="Projectile_MagXCom")
