--- a/PlayableSectopod/Config/XComClassData.ini
+++ b/PlayableSectopod/Config/XComClassData.ini
@@ -9,8 +9,8 @@
 +NumInForcedDeck=0
 +NumInDeck=0
 +KillAssistsPerKill=5
-+bCanHaveBonds=false 
-+bAllowAWCAbilities=1
++bCanHaveBonds=false
++bAllowAWCAbilities=0
 +UnfavoredClasses="SectopodClass"
 +BaseAbilityPointsPerPromotion=4
 +bIgnoreInjuries=1
@@ -19,61 +19,57 @@
 +AllowedWeapons=(SlotType=eInvSlot_PrimaryWeapon, WeaponType="PA_SectopodGunCat")
 +AllowedWeapons=(SlotType=eInvSlot_SecondaryWeapon, WeaponType="PA_Sectopod_WrathCannonCat")
 
+
 ; squaddie
-+SoldierRanks=(AbilitySlots=((), \\
-								((AbilityType=(AbilityName="PA_BlasterShot", ApplyToWeaponSlot=eInvSlot_TertiaryWeapon))), \\
-								(AbilityType=(AbilityName="PA_InitialState")), \\
-								(AbilityType=(AbilityName="PA_SectopodHigh",  ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
-								(AbilityType=(AbilityName="PA_SectopodLow",  ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
-				aStatProgression=((StatType=eStat_Offense,StatAmount=1), (StatType=eStat_HP,StatAmount=0),  (StatType=eStat_Strength,StatAmount=2), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=1))),\\
-			 )
-
-; corporal
-+SoldierRanks=(AbilitySlots=(	((AbilityType=(AbilityName="Intimidate")), \\
-								(AbilityType=(AbilityName="EverVigilant", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon))), \\
-								(RandomDeckName="Tier1_XComAbilities"), \\
++SoldierRanks=(AbilitySlots=(    (AbilityType=(AbilityName="PA_BlasterShot", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
+                                 (AbilityType=(AbilityName="PA_InitialState", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
+								 (AbilityType=(AbilityName="SectopodHigh")), \\
+								 (AbilityType=(AbilityName="SectopodLow")), \\
 							 ), \\
-				aStatProgression=((StatType=eStat_Offense,StatAmount=1), (StatType=eStat_HP,StatAmount=0), (StatType=eStat_Strength,StatAmount=2), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=0))),\\
-
-
-; sergeant
-+SoldierRanks=(AbilitySlots=(	((AbilityType=(AbilityName="PA_SectopodLightningField", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
-								(AbilityType=(AbilityName="BulletShred")), \\
-								(AbilityType=(AbilityName="Repair",  ApplyToWeaponSlot=eInvSlot_Unknown))), \\
-								(RandomDeckName="Tier1_XComAbilities"), \\
-							 ), \\
-				aStatProgression=((StatType=eStat_Offense,StatAmount=1), (StatType=eStat_HP,StatAmount=0), (StatType=eStat_Strength,StatAmount=2), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=0))),\\
-
-
-; lieutenant
-+SoldierRanks=(AbilitySlots=(	((AbilityType=(AbilityName="PA_WrathCannon_Ability")), \\
-								(AbilityType=(AbilityName="HoloTargeting",  ApplyToWeaponSlot=eInvSlot_SecondaryWeapon))), \\
-								(RandomDeckName="Tier2_XComAbilities"), \\
-							 ), \\
-				aStatProgression=((StatType=eStat_Offense,StatAmount=2), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=2), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=0))),\\
-
-
-; Captain
-+SoldierRanks=(AbilitySlots=(	((AbilityType=(AbilityName="RunAndGun")), \\
-								(AbilityType=(AbilityName="SaturationFire",  ApplyToWeaponSlot=eInvSlot_PrimaryWeapon))), \\
-								(RandomDeckName="Tier2_XComAbilities"), \\
-							 ), \\
-				aStatProgression=((StatType=eStat_Offense,StatAmount=2), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=2), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=0))),\\
-
-
-; Major
-+SoldierRanks=(AbilitySlots=(	((AbilityType=(AbilityName="Sentinel")), \\
-								(AbilityType=(AbilityName="Squadsight", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
-								(AbilityType=(AbilityName="Untouchable",  ApplyToWeaponSlot=eInvSlot_SecondaryWeapon))), \\
-								(RandomDeckName="Tier2_XComAbilities"), \\
-							 ), \\
-				aStatProgression=((StatType=eStat_Offense,StatAmount=2), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=2), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=0))),\\
-
-
-; Colonel
-+SoldierRanks=(AbilitySlots=(	((AbilityType=(AbilityName="Hailofbullets")), \\
-								(AbilityType=(AbilityName="ReturnFire", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
-								(AbilityType=(AbilityName="FanFire",  ApplyToWeaponSlot=eInvSlot_SecondaryWeapon))), \\
-								(RandomDeckName="Tier2_XComAbilities"), \\
-							 ), \\
-				aStatProgression=((StatType=eStat_Offense,StatAmount=2), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=2), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=0))),\\
+                aStatProgression=((StatType=eStat_Offense,StatAmount=1), (StatType=eStat_HP,StatAmount=0),  (StatType=eStat_Strength,StatAmount=2), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=1)),\\
+             )
+;corporal
++SoldierRanks=(AbilitySlots=(   (AbilityType=(AbilityName="Intimidate")), \\
+                                (AbilityType=(AbilityName="EverVigilant",  ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
+                                (RandomDeckName="Tier1_XComAbilities"), \\
+                             ), \\
+                aStatProgression=((StatType=eStat_Offense,StatAmount=1), (StatType=eStat_HP,StatAmount=0), (StatType=eStat_Strength,StatAmount=2), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=0)),\\
+             )
+;sergeant
++SoldierRanks=(AbilitySlots=(   (AbilityType=(AbilityName="PA_SectopodLightningField", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
+                                (AbilityType=(AbilityName="BulletShred")), \\
+                                (AbilityType=(AbilityName="Repair")), \\
+                                (RandomDeckName="Tier1_XComAbilities"), \\
+                             ), \\
+                aStatProgression=((StatType=eStat_Offense,StatAmount=1), (StatType=eStat_HP,StatAmount=0), (StatType=eStat_Strength,StatAmount=2), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=0)),\\
+             )
+;lt
++SoldierRanks=(AbilitySlots=(   (AbilityType=(AbilityName="PA_WrathCannon_Ability")), \\
+                                (AbilityType=(AbilityName="HoloTargeting", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)), \\
+                                (RandomDeckName="Tier2_XComAbilities"), \\
+                             ), \\
+                aStatProgression=((StatType=eStat_Offense,StatAmount=2), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=2), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=0)),\\
+             )
+;cpt
++SoldierRanks=(AbilitySlots=(   (AbilityType=(AbilityName="RunAndGun")), \\
+                                (AbilityType=(AbilityName="SaturationFire")), \\
+                                (RandomDeckName="Tier2_XComAbilities"), \\
+                             ), \\
+                aStatProgression=((StatType=eStat_Offense,StatAmount=1), (StatType=eStat_HP,StatAmount=0), (StatType=eStat_Strength,StatAmount=2), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=0)),\\
+             )
+;maj
++SoldierRanks=(AbilitySlots=(   (AbilityType=(AbilityName="Sentinel")), \\
+                                (AbilityType=(AbilityName="Squadsight", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
+                                (AbilityType=(AbilityName="Untouchable")), \\
+                                (RandomDeckName="Tier2_XComAbilities"), \\
+                             ), \\
+                aStatProgression=((StatType=eStat_Offense,StatAmount=2), (StatType=eStat_HP,StatAmount=0), (StatType=eStat_Strength,StatAmount=2), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=0)),\\
+             )
+;col
++SoldierRanks=(AbilitySlots=(   (AbilityType=(AbilityName="Hailofbullets")), \\
+                                (AbilityType=(AbilityName="ReturnFire", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
+                                (AbilityType=(AbilityName="FanFire",  ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)), \\
+                                (RandomDeckName="Tier2_XComAbilities"), \\
+                             ), \\
+                aStatProgression=((StatType=eStat_Offense,StatAmount=1), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=2), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=0)),\\
+             )
