Fixed cost / CI support

--- a/PlayableSectopod/Config/XComClassData.ini
+++ b/PlayableSectopod/Config/XComClassData.ini
@@ -24,6 +24,7 @@
                                  (AbilityType=(AbilityName="PA_InitialState", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
 								 (AbilityType=(AbilityName="SectopodHigh")), \\
 								 (AbilityType=(AbilityName="SectopodLow")), \\
+                         (AbilityType=(AbilityName="SectopodMedium")), \\
 							 ), \\
                 aStatProgression=((StatType=eStat_Offense,StatAmount=1), (StatType=eStat_HP,StatAmount=0),  (StatType=eStat_Strength,StatAmount=2), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=1)),\\
              )
