--- a/PlayableSectopod/Config/XComGameData_WeaponData.ini
+++ b/PlayableSectopod/Config/XComGameData_WeaponData.ini
@@ -1,4 +1,4 @@
-[PlayableSectopod.X2Item_PASectopod]
+[PlayableSectopod.X2Item_PASectopod_Weapons]
 
 ;* This is the base damage of the WrathCannon. Default is : Damage=10, Spread=1, PlusOne=50, Crit=03, Pierce=1, Shred=2, Tag = "", DamageType="Explosion". Base game default is "Sectopod_WrathCannon_BaseDamage= (Damage=10, Spread=1, PlusOne=50, Crit=0, Pierce=0, Shred=0, Tag = "", DamageType="Explosion")"
 PA_WrathCannon_BaseDamage= (Damage=15, Spread=1, PlusOne=50, Crit=3, Pierce=1, Shred=2, Tag = "", DamageType="Explosion")
