--- a/PlayableSectopod/Config/XComGameData_WeaponData.ini
+++ b/PlayableSectopod/Config/XComGameData_WeaponData.ini
@@ -40,3 +40,36 @@ PA_LightningFieldDamage= (Damage=10, Spread=1, PlusOne=0, Crit=0, Pierce=3, Shre
 
 ;* This is the base damage of the Blaster shot. Damage=10, Spread = 0, PlusOne = 50, Crit = 5, Pierce = 1, Shred = 3, Tag = "", DamageType="Projectile_MagXCom". Base game default is PA_SectopodGun_BaseDamage= (Damage=10, Spread = 0, PlusOne = 50, Crit = 4, Pierce = 0, Shred = 2, Tag = "", DamageType="Projectile_MagXCom")
 PA_SectopodGun_BaseDamage= (Damage=10, Spread = 0, PlusOne = 50, Crit = 5, Pierce = 1, Shred = 3, Tag = "", DamageType="Projectile_MagXCom")
+
+PA_SectopodGun_ClipSize = 99999
+PA_SectopodGun_SoundRange = 27
+PA_SectopodGun_EnvironmentDamage = 25
+PA_SectopodGun_IdealRange = 8
+
+
+PA_WrathCannon_RangeAccuracy[0] = 0
+PA_WrathCannon_RangeAccuracy[1] = 0
+PA_WrathCannon_RangeAccuracy[2] = 0
+PA_WrathCannon_RangeAccuracy[3] = 0
+PA_WrathCannon_RangeAccuracy[4] = 0
+PA_WrathCannon_RangeAccuracy[5] = 0
+PA_WrathCannon_RangeAccuracy[6] = 0
+PA_WrathCannon_RangeAccuracy[7] = 0
+PA_WrathCannon_RangeAccuracy[8] = 0
+PA_WrathCannon_RangeAccuracy[9] = 0
+PA_WrathCannon_RangeAccuracy[10] = 0
+PA_WrathCannon_RangeAccuracy[11] = 0
+PA_WrathCannon_RangeAccuracy[12] = 0
+PA_WrathCannon_RangeAccuracy[13] = 0
+PA_WrathCannon_RangeAccuracy[14] = 0
+PA_WrathCannon_RangeAccuracy[15] = 0
+PA_WrathCannon_RangeAccuracy[16] = 0
+PA_WrathCannon_RangeAccuracy[17] = 0
+PA_WrathCannon_RangeAccuracy[18] = 0
+PA_WrathCannon_RangeAccuracy[19] = 0
+PA_WrathCannon_RangeAccuracy[20] = 0
+PA_WrathCannon_RangeAccuracy[21] = 0
+PA_WrathCannon_RangeAccuracy[22] = 0
+PA_WrathCannon_RangeAccuracy[24] = 0
+PA_WrathCannon_RangeAccuracy[25] = 0
+PA_WrathCannon_RangeAccuracy[26] = 0
