Added Bright Eye config

--- a/PlayableSectopod/Config/XComGame.ini
+++ b/PlayableSectopod/Config/XComGame.ini
@@ -1,2 +1,4 @@
 [PlayableSectopod.X2DownloadableContentInfo_PlayableSectopod]
 DLCIdentifier="PlayableSectopod"
+
++BrightEyesCharacters=PA_Sectopod
