Added code for CH

--- a/PlayableSectopod/Config/XComGame.ini
+++ b/PlayableSectopod/Config/XComGame.ini
@@ -2,3 +2,6 @@
 DLCIdentifier="PlayableSectopod"
 
 +BrightEyesCharacters=PA_Sectopod
+
+[PlayableSectopod CHModDependancy]
+DisplayName="Playable Sectopod"
