Fixed class data

--- a/PlayableSectopod/Config/XComClassData.ini
+++ b/PlayableSectopod/Config/XComClassData.ini
@@ -20,11 +20,10 @@
 +AllowedWeapons=(SlotType=eInvSlot_SecondaryWeapon, WeaponType="PA_Sectopod_WrathCannonCat")
 
 ; squaddie
-+SoldierRanks=(AbilitySlots=(    (AbilityType=(AbilityName="PA_BlasterShot", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
++SoldierRanks=(AbilitySlots=(    (AbilityType=(AbilityName="SkirmisherStrike", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
                                  (AbilityType=(AbilityName="PA_InitialState", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
-								 (AbilityType=(AbilityName="SectopodHigh")), \\
-								 (AbilityType=(AbilityName="SectopodLow")), \\
-                         (AbilityType=(AbilityName="SectopodMedium")), \\
+								 (AbilityType=(AbilityName="PA_SectopodHigh")), \\
+								 (AbilityType=(AbilityName="PA_SectopodLow")), \\
 							 ), \\
                 aStatProgression=((StatType=eStat_Offense,StatAmount=1), (StatType=eStat_HP,StatAmount=0),  (StatType=eStat_Strength,StatAmount=2), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=1)),\\
              )
