--- a/PlayableSectopod/Config/XComClassData.ini
+++ b/PlayableSectopod/Config/XComClassData.ini
@@ -20,8 +20,7 @@
 +AllowedWeapons=(SlotType=eInvSlot_SecondaryWeapon, WeaponType="PA_Sectopod_WrathCannonCat")
 
 ; squaddie
-+SoldierRanks=(AbilitySlots=(    (AbilityType=(AbilityName="SkirmisherStrike", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
-                                 (AbilityType=(AbilityName="PA_InitialState", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
++SoldierRanks=(AbilitySlots=( (AbilityType=(AbilityName="PA_InitialState", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
 								 (AbilityType=(AbilityName="PA_SectopodHigh")), \\
 								 (AbilityType=(AbilityName="PA_SectopodLow")), \\
 							 ), \\
@@ -43,8 +42,8 @@
                 aStatProgression=((StatType=eStat_Offense,StatAmount=1), (StatType=eStat_HP,StatAmount=0), (StatType=eStat_Strength,StatAmount=2), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=0)),\\
              )
 ;lt
-+SoldierRanks=(AbilitySlots=(   (AbilityType=(AbilityName="PA_WrathCannon_Ability")), \\
-                                (AbilityType=(AbilityName="HoloTargeting", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)), \\
++SoldierRanks=(AbilitySlots=(   (AbilityType=(AbilityName="PA_WrathCannon_Ability", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)), \\
+                                (AbilityType=(AbilityName="HoloTargeting", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
                                 (RandomDeckName="Tier2_XComAbilities"), \\
                              ), \\
                 aStatProgression=((StatType=eStat_Offense,StatAmount=2), (StatType=eStat_HP,StatAmount=1), (StatType=eStat_Strength,StatAmount=2), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=0)),\\
