--- a/PlayableSectopod/Config/XComStrategyTuning.ini
+++ b/PlayableSectopod/Config/XComStrategyTuning.ini
@@ -1,7 +1,3 @@
-[PlayableSectopod.X2EventListener_AlienCapture]
-NormalChance = 0; 25% chance to capture an alien unit via fultoning.
-FriendlyChance = 0; when a defector (or mind controlled alien) successfully evacs or is fultoned out of a mission, this is their chance of becoming a recruit for XCOM.
-
 [PlayableAdvent.PA_Characters]
 
 PA_SectopodBody=0
@@ -24,3 +20,12 @@ Cost=(ResourceCosts[0]=(ItemTemplateName="Supplies", Quantity=700), ArtifactCost
 [PA_Sectopod_Tech_Diff_3 X2TechTemplate]
 PointsToComplete = 3900
 Cost=(ResourceCosts[0]=(ItemTemplateName="Supplies", Quantity=800), ArtifactCosts[0]=(ItemTemplateName="EleriumCore", Quantity=8), ArtifactCosts[1]=(ItemTemplateName="CorpseSectopod", Quantity=4), (ItemTemplateName="AlienAlloys", Quantity=300))
+
+[PrototypeArmoury.PATemplateMods]
+
++arrMakeItemBuildable=(ItemName="PA_SectopodGun")
++arrMakeItemBuildable=(ItemName="PA_Sectopod_Wrathcannon_WPN")
+
+; price / 2
++arrTradingPostModifiers=(ItemName="{PA_SectopodGun}", NewValue={25})
++arrTradingPostModifiers=(ItemName="{PA_Sectopod_Wrathcannon_WPN}", NewValue={50})
