--- a/PlayableSectopod/Config/XComGame.ini
+++ b/PlayableSectopod/Config/XComGame.ini
@@ -1,7 +1,9 @@
 [PlayableSectopod.X2DownloadableContentInfo_PlayableSectopod]
 DLCIdentifier="PlayableSectopod"
 
-+BrightEyesCharacters=PA_Sectopod
 
 [PlayableSectopod CHModDependancy]
 DisplayName="Playable Sectopod"
+
+//TODO : add support for Rusty's Bright Eyes mod
+// +BrightEyesCharacters=PA_Sectopod
