--- a/PlayableSectopod/Config/XComClassData.ini
+++ b/PlayableSectopod/Config/XComClassData.ini
@@ -20,7 +20,7 @@
 +AllowedWeapons=(SlotType=eInvSlot_SecondaryWeapon, WeaponType="PA_Sectopod_WrathCannonCat")
 
 ; squaddie
-+SoldierRanks=(AbilitySlots=( (AbilityType=(AbilityName="PA_InitialState", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
++SoldierRanks=(AbilitySlots=( (AbilityType=(AbilityName="PA_SectopodInitialState", )), \\
 								 (AbilityType=(AbilityName="PA_SectopodHigh")), \\
 								 (AbilityType=(AbilityName="PA_SectopodLow")), \\
 							 ), \\
