--- a/PlayableSectopod/Config/XComClassData.ini
+++ b/PlayableSectopod/Config/XComClassData.ini
@@ -20,9 +20,9 @@
 +AllowedWeapons=(SlotType=eInvSlot_SecondaryWeapon, WeaponType="PA_Sectopod_WrathCannonCat")
 
 ; squaddie
-+SoldierRanks=(AbilitySlots=( (AbilityType=(AbilityName="PA_SectopodInitialState", )), \\
-								 (AbilityType=(AbilityName="PA_SectopodHigh")), \\
-								 (AbilityType=(AbilityName="PA_SectopodLow")), \\
++SoldierRanks=(AbilitySlots=( (AbilityType=(AbilityName="PA_SectopodInitialState")), \\
+								 (AbilityType=(AbilityName="SectopodHigh")), \\
+								 (AbilityType=(AbilityName="SectopodLow")), \\
 							 ), \\
                 aStatProgression=((StatType=eStat_Offense,StatAmount=1), (StatType=eStat_HP,StatAmount=0),  (StatType=eStat_Strength,StatAmount=2), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=1)),\\
              )
@@ -42,7 +42,7 @@
                 aStatProgression=((StatType=eStat_Offense,StatAmount=1), (StatType=eStat_HP,StatAmount=0), (StatType=eStat_Strength,StatAmount=2), (StatType=eStat_Hacking,StatAmount=0), (StatType=eStat_CombatSims,StatAmount=0)),\\
              )
 ;lt
-+SoldierRanks=(AbilitySlots=(   (AbilityType=(AbilityName="PA_WrathCannon_Ability", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)), \\
++SoldierRanks=(AbilitySlots=(   (AbilityType=(AbilityName="PA_WrathCannonStage1", ApplyToWeaponSlot=eInvSlot_SecondaryWeapon)), \\
                                 (AbilityType=(AbilityName="HoloTargeting", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
                                 (RandomDeckName="Tier2_XComAbilities"), \\
                              ), \\
