Added config / rearanged the code

--- a/PlayableSectopod/Config/XcomGameData_AbilityData.ini
+++ b/PlayableSectopod/Config/XcomGameData_AbilityData.ini
@@ -68,6 +68,10 @@
 ;* var config bool PA_SectopodInitialStateDontDisplayInAbilitySummary = Does the ability do NOT show in the Class Ability Summary. Default is "false" (so it does  show in the summary). Base game default is "false"
 ;* var config int PA_SectopodInitialStateActionPoints = How many Actions point does the ability gives. Default is "1". Base game default is "1"
 
+;* DoesPA_SectopodInitialStateGiveRegeneration = Does the ability grant a heal like the stasis vest. Default is "true"
+;* PA_SectopodInitialStateHealPerTurn = For how many HP the ability heal for. Default is 4
+;* PA_SectopodInitialStateMaxHeal = The max of HP that can be healed by this ability. Default is 16 (so 4 times the heal)
+
 PA_WrathCannonConsumeAllPoints = false
 PA_WrathCannonExplosiveDamage = true
 PA_WrathCannonIsExplosive = true
@@ -102,3 +106,7 @@ PA_SectopodLightningFieldCooldown = 3
 
 PA_SectopodInitialStateDontDisplayInAbilitySummary = false
 PA_SectopodInitialStateActionPoints = 1
+
+DoesPA_SectopodInitialStateGiveRegeneration = true
+PA_SectopodInitialStateHealPerTurn = 4
+PA_SectopodInitialStateMaxHeal = 16
