added PA_BreakWall ability if bool is false

--- a/PlayableSectopod/Config/XComGameData_CharacterStats.ini
+++ b/PlayableSectopod/Config/XComGameData_CharacterStats.ini
@@ -20,3 +20,6 @@ CharacterBaseStats[eStat_HackDefense]=125
 CharacterBaseStats[eStat_FlankingCritChance]=33
 CharacterBaseStats[eStat_FlankingAimBonus]=0
 CharacterBaseStats[eStat_Strength]=50
+
+CanWallClimb = false
+BreakWalls = false
