--- a/PlayableSectopod/Config/XComStrategyTuning.ini
+++ b/PlayableSectopod/Config/XComStrategyTuning.ini
@@ -7,19 +7,19 @@ ALIENS_APPEAR_IN_BASE = false
 
 [PA_Sectopod_Tech_Diff_0 X2TechTemplate]
 PointsToComplete = 2700
-Cost=(ResourceCosts[0]=(ItemTemplateName="Supplies", Quantity=600), ArtifactCosts[0]=(ItemTemplateName="EleriumCore", Quantity=4), ArtifactCosts[1]=(ItemTemplateName="CorpseSectopod", Quantity=1), (ItemTemplateName="AlienAlloys", Quantity=150))
+Cost=(ResourceCosts[0]=(ItemTemplateName="Supplies", Quantity=600), ArtifactCosts[0]=(ItemTemplateName="EleriumCore", Quantity=4), ArtifactCosts[1]=(ItemTemplateName="CorpseSectopod", Quantity=1), (ItemTemplateName="AlienAlloy", Quantity=150))
 
 [PA_Sectopod_Tech_Diff_1 X2TechTemplate]
 PointsToComplete = 3200
-Cost=(ResourceCosts[0]=(ItemTemplateName="Supplies", Quantity=650), ArtifactCosts[0]=(ItemTemplateName="EleriumCore", Quantity=5), ArtifactCosts[1]=(ItemTemplateName="CorpseSectopod", Quantity=2), (ItemTemplateName="AlienAlloys", Quantity=200))
+Cost=(ResourceCosts[0]=(ItemTemplateName="Supplies", Quantity=650), ArtifactCosts[0]=(ItemTemplateName="EleriumCore", Quantity=5), ArtifactCosts[1]=(ItemTemplateName="CorpseSectopod", Quantity=2), (ItemTemplateName="AlienAlloy", Quantity=200))
 
 [PA_Sectopod_Tech_Diff_2 X2TechTemplate]
 PointsToComplete = 3600
-Cost=(ResourceCosts[0]=(ItemTemplateName="Supplies", Quantity=700), ArtifactCosts[0]=(ItemTemplateName="EleriumCore", Quantity=6), ArtifactCosts[1]=(ItemTemplateName="CorpseSectopod", Quantity=3), (ItemTemplateName="AlienAlloys", Quantity=250))
+Cost=(ResourceCosts[0]=(ItemTemplateName="Supplies", Quantity=700), ArtifactCosts[0]=(ItemTemplateName="EleriumCore", Quantity=6), ArtifactCosts[1]=(ItemTemplateName="CorpseSectopod", Quantity=3), (ItemTemplateName="AlienAlloy", Quantity=250))
 
 [PA_Sectopod_Tech_Diff_3 X2TechTemplate]
 PointsToComplete = 3900
-Cost=(ResourceCosts[0]=(ItemTemplateName="Supplies", Quantity=800), ArtifactCosts[0]=(ItemTemplateName="EleriumCore", Quantity=8), ArtifactCosts[1]=(ItemTemplateName="CorpseSectopod", Quantity=4), (ItemTemplateName="AlienAlloys", Quantity=300))
+Cost=(ResourceCosts[0]=(ItemTemplateName="Supplies", Quantity=800), ArtifactCosts[0]=(ItemTemplateName="EleriumCore", Quantity=8), ArtifactCosts[1]=(ItemTemplateName="CorpseSectopod", Quantity=4), (ItemTemplateName="AlienAlloy", Quantity=300))
 
 [PrototypeArmoury.PATemplateMods]
 
