--- a/PlayableSectopod/Config/XcomGameData_AbilityData.ini
+++ b/PlayableSectopod/Config/XcomGameData_AbilityData.ini
@@ -50,6 +50,14 @@
 ;* PA_SectopodInitialStateHealPerTurn = For how many HP the ability heal for. Default is 4
 ;* PA_SectopodInitialStateMaxHeal = The max of HP that can be healed by this ability. Default is 16 (so 4 times the heal)
 
+; ============================================================
+; Sectopod Wrecking Wall Ability
+; ============================================================
+
+;* This ability is added if the `BreakWalls` is set to `false` in the XcomPlayableSectopod.ini file
+;* var config int PA_SectopodWreckingWallCooldown = What is the cooldown of the ability. Default is "3".
+;* var config int PA_SectopodWreckingWallActionPoints = How many Action Points does the ability cost. Default is "1".
+
 PA_WrathCannonConsumeAllPoints = false
 PA_WrathCannonExplosiveDamage = true
 PA_WrathCannonIsExplosive = true
@@ -78,3 +86,6 @@ PA_SectopodInitialStateActionPoints = 1
 DoesPA_SectopodInitialStateGiveRegeneration = true
 PA_SectopodInitialStateHealPerTurn = 4
 PA_SectopodInitialStateMaxHeal = 16
+
+PA_SectopodWreckingWallCooldown = 3
+PA_SectopodWreckingWallActionPoints = 1
