added short range teleport

--- a/PlayableSectopod/Config/XcomPlayableSectopod.ini
+++ b/PlayableSectopod/Config/XcomPlayableSectopod.ini
@@ -1,4 +1,4 @@
 [PlayableSectopod.X2Character_PlayableSectopod]
 
-CanWallClimb = true
-BreakWalls = false
+;* If set to true, the sectopod won't be able to break walls, but will be able to climb them.
+ClimbWall = false
